Bug with overlapping of flex items #40

--- a/less/objects/article_details.less
+++ b/less/objects/article_details.less
@@ -336,6 +336,10 @@
 // for mobiles
 
 @media (max-width: 767px) {
+	
+	.data-for-mobiles > div {
+		flex-shrink: 0;
+	}
 
 	.for-mobile-view {
 		display: block;
